# rust_benchmarking

./: Cargo.toml  Readme.md
benches/: bench1.rs
src/: lib.rs
